vX.Y.Z

- Fix data generator quoting bug introduced in v0.46.0
- Clean up client usage message with additions in v0.46.0
- Fix inconsistencies with handling output directory
- Reformat driver usage to be consistent with other programs

v0.46.0

- Refactor client code for libpq to automatically build support if libraries
  exist
- Remove support for Drizzle; discontinued since 2016
- Allow specifying partitioning options in PostgreSQL data load script 
- Refactor client code for sqlite3 to automatically build support if libraries
  exist
- Refactor client code for MySQL to automatically build support if libraries
  exist
- Refactor client code for unixODBC to automatically build support if libraries
  exist
- Fix some issues in CockroachDB transaction code.
- Use function pointers for managing output of timestamps in datagen
- Replace macros with functions in datagen

v0.45.1

- Rename PostgreSQL dbt2 extension's SQL file

v0.45.0

- Fix memory clobbering bug introduced when using libpq functions in binary
  mode
- Increase size of additional data structures for UTF-8

v0.44.0

- Made some changes to Docker scripts to help customize PostgreSQL version used
- Add scripts to build a database on CockroachDB
- Add transaction logic to the client for CockroachDB
- Update workload scripts for CockroachDB
- Add scripts to build a database on YugabyteDB
- Update libpq client code to transmit and receive data in binary mode.

v0.43.0

- Adopt Artistic License 2.0
- Fix run-workload script to work on single tier configuration, bugs
  introduced v0.42 
- Driver now logs w_id and d_id per transaction
- Fix segmentation fault when limiting the total number of driver threads
- Increase buffer size for the database hostname in the client to 64 bytes
- Add -y flag to run-workload script to specify database is a service
- Fix driver's rampup calculation when limiting total emulated terminals
- Update Dockerfile to use Rocky Linux instead of CentOS